# pytr-Modified-

./: .gitignore  LICENSE  README.md  autoStopLoss.py  pyproject.toml  testing1.py
locale/de/LC_MESSAGES/: messages.mo
locale/es/LC_MESSAGES/: messages.mo
locale/fr/LC_MESSAGES/: messages.mo
locale/pl/LC_MESSAGES/: messages.mo
locale/pt/LC_MESSAGES/: messages.mo
locale/ru/LC_MESSAGES/: messages.mo
locale/sk/LC_MESSAGES/: messages.mo
pytr/: account.py  api.py  main.py  news.py  orderOverview.py  portfolio.py  stoploss.py  utils.py
pytr/locale/cs/LC_MESSAGES/: messages.mo
pytr/locale/da/LC_MESSAGES/: messages.mo
pytr/locale/en/LC_MESSAGES/: messages.mo
pytr/locale/it/LC_MESSAGES/: messages.mo
pytr/locale/nl/LC_MESSAGES/: messages.mo
pytr/locale/zh/LC_MESSAGES/: messages.mo
