[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytr"
version = "0.1.0"
description = "Reengineered version of pytr API"
authors = [
    { name = "Sören Fox", email = "soeren.0211@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pytr = "pytr.__main__:main"

[project.urls]
Homepage = "https://github.com/SoerenFox/pytr-Modified-"

[tool.setuptools]
packages = ["pytr"]
include-package-data = true
  